--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "theopera/framework": "v0.1a",
+    "theopera/framework": "0.1a",
     "twig/twig": "^1.24"
   },
   "autoload": {
