--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
     }
   ],
   "require": {
-    "theopera/framework": "0.1a",
+    "theopera/framework": "0.2a",
     "twig/twig": "^1.24"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.5"
   },
   "autoload": {
     "psr-4": {
